# rcli

./: Cargo.toml
src/: lib.rs  main.rs
src/commands/: csv_command.rs  mod.rs
