[package]
name = "rcli"
authors = ["pigteetee <pigteetee@outlook.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
